Done minor changes in magin

--- a/Crud.html
+++ b/Crud.html
@@ -30,7 +30,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav ms-sm-auto text-end me-2 fs-5">
+        <div class="navbar-nav ms-sm-auto text-end me-2">
           <a class="nav-link" href="index.html" >Home</a>
           <a class="nav-link active" href="Crud.html" aria-current="page">Curd App</a>
           <a class="nav-link" href="Resume.html">Rusume</a>
