--- a/Resume.html
+++ b/Resume.html
@@ -19,13 +19,13 @@
   
   <nav class="navbar navbar-expand-md navbar-dark bg-dark border-bottom border-success">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">MyWeb</a>
+      <a class="navbar-brand fs-4" href="#">MyWeb</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav ms-sm-auto text-center">
+        <div class="navbar-nav ms-sm-auto text-end me-2">
           <a class="nav-link" href="index.html" aria-current="page">Home</a>
           <a class="nav-link" href="Crud.html">Curd App</a>
           <a class="nav-link active" href="Resume.html">Rusume</a>
@@ -74,9 +74,9 @@
           </div>
         
         <h4>Social Media</h4>
-          <a class="text-decoration-none" href="https://www.linkedin.com/in/awanish-yadav-bb665025a/" target="_blank">Linkdin <span><i class="bi bi-linkedin"></i></span></span></a> 
-        <br>
-          <a class="text-decoration-none" href="https://www.instagram.com/bablu_0626/" target="_blank">Instagaram <span><i class="bi bi-instagram"></i></span></a>
+          <a class="text-decoration-none me-5" href="https://www.linkedin.com/in/awanish-yadav-bb665025a/" target="_blank">Linkdin <span><i class="bi bi-linkedin"></i></span></span></a> 
+          
+          <a class="text-decoration-none me-5" href="https://www.instagram.com/bablu_0626/" target="_blank">Instagaram <span><i class="bi bi-instagram"></i></span></a>
       </div>
     </div>
 
