--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav ms-sm-auto text-end me-2 fs-5">
+                <div class="navbar-nav ms-sm-auto text-end me-2 ">
                     <a class="nav-link active" href="index.html" aria-current="page">Home</a>
                     <a class="nav-link" href="Crud.html">Curd App</a>
                     <a class="nav-link" href="Resume.html">Rusume</a>
@@ -64,19 +64,18 @@
                 <div class="accordion" id="accordionExample">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="headingOne">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"  aria-expanded="true" aria-controls="collapseOne">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"  aria-expanded="false" aria-controls="collapseOne">
                                 Resources
                             </button>
                         </h2>
-                        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
-                            data-bs-parent="#accordionExample">
+                        <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne"  data-bs-parent="#accordionExample">
                             <div class="accordion-body">
                                 <strong>Youtube Videos</strong> 
-                                 <code>&nbsp; &nbsp; &nbsp;<a href="http://www.youtube.com">Link</a></code>
+                                 <code>&nbsp; &nbsp; &nbsp;<a href="http://www.youtube.com" target="_blank">Link</a></code>
                             </div>
                             <div class="accordion-body">
                                 <strong>PDFs</strong>
-                                <code>&nbsp; &nbsp; &nbsp;<a href="http://www.drive.com">Link</a></code>
+                                <code>&nbsp; &nbsp; &nbsp;<a href="http://www.drive.google.com" target="_blank">Link</a></code>
                             </div>
                         </div>
                     </div>
@@ -111,12 +110,11 @@
                 <div class="accordion accordion-flush" id="accordionFlushExample2">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="flush-headingOne">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
                                 Resources
                             </button>
                         </h2>
-                        <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
+                        <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
                             data-bs-parent="#accordionFlushExample">
                             <div class="accordion-body">
                                 <code><a href="http://drive.google.com" class="text-decoration-none">Learn HTML PDF</a></code>
@@ -150,13 +148,11 @@
                 <div class="accordion accordion-flush" id="accordionFlushExample3">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="flush-headingOne">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
                                 Resources
                             </button>
                         </h2>
-                        <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
-                            data-bs-parent="#accordionFlushExample">
+                        <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
                             <div class="accordion-body">
                                 <code><a href="http://drive.google.com" class="text-decoration-none">Learn HTML PDF</a></code>
                             </div>
@@ -189,14 +185,12 @@
                 <a type="button" class="btn btn-success mb-3" href="https://www.python.org/doc/essays/blurb/">Learn More</a>
                 <div class="accordion accordion-flush" id="accordionFlushExample4">
                     <div class="accordion-item">
-                        <h2 class="accordion-header" id="flush-headingOne">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                        <h2 class="accordion-header" id="flush-headingFour">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
                                 Resources
                             </button>
                         </h2>
-                        <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
-                            data-bs-parent="#accordionFlushExample">
+                        <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour"  data-bs-parent="#accordionFlushExample">
                             <div class="accordion-body">
                                 <code><a href="http://drive.google.com" class="text-decoration-none">Learn HTML PDF</a></code>
                             </div>
@@ -230,14 +224,12 @@
                 <a type="button" class="btn btn-info mb-3" href="https://www.learn-c.org/">Learn More</a>
                 <div class="accordion accordion-flush" id="accordionFlushExample5">
                     <div class="accordion-item">
-                        <h2 class="accordion-header" id="flush-headingOne">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                        <h2 class="accordion-header" id="flush-headingFive">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
                                 Resources
                             </button>
                         </h2>
-                        <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
-                            data-bs-parent="#accordionFlushExample">
+                        <div id="flush-collapseFive" class="accordion-collapse collapse" aria-labelledby="flush-headingFive"  data-bs-parent="#accordionFlushExample">
                             <div class="accordion-body">
                                 <code><a href="http://drive.google.com" class="text-decoration-none">Learn HTML PDF</a></code>
                             </div>
@@ -274,14 +266,12 @@
                 <a type="button" class="btn btn-success mb-3" href="https://www.javatpoint.com/cpp-tutorial">Learn More</a>
                 <div class="accordion accordion-flush" id="accordionFlushExample6">
                     <div class="accordion-item">
-                        <h2 class="accordion-header" id="flush-headingOne">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                        <h2 class="accordion-header" id="flush-headingSix">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"  data-bs-target="#flush-collapseSix" aria-expanded="false" aria-controls="flush-collapseSix">
                                 Resources
                             </button>
                         </h2>
-                        <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
-                            data-bs-parent="#accordionFlushExample">
+                        <div id="flush-collapseSix" class="accordion-collapse collapse" aria-labelledby="flush-headingSix" data-bs-parent="#accordionFlushExample">
                             <div class="accordion-body">
                                 <code><a href="http://drive.google.com" class="text-decoration-none">Learn HTML PDF</a></code>
                             </div>
@@ -316,14 +306,12 @@
                 <a type="button" class="btn btn-info mb-3" href="https://dev.java/learn/getting-started-with-java/">Learn More</a>
                 <div class="accordion accordion-flush" id="accordionFlushExample7">
                     <div class="accordion-item">
-                        <h2 class="accordion-header" id="flush-headingOne">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                        <h2 class="accordion-header" id="flush-headingSeven">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseSeven" aria-expanded="false" aria-controls="flush-collapseSeven">
                                 Resources
                             </button>
                         </h2>
-                        <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
-                            data-bs-parent="#accordionFlushExample">
+                        <div id="flush-collapseSeven" class="accordion-collapse collapse" aria-labelledby="flush-headingSeven" data-bs-parent="#accordionFlushExample">
                             <div class="accordion-body">
                                 <code><a href="http://drive.google.com" class="text-decoration-none">Learn HTML PDF</a></code>
                             </div>
