--- a/payment-form.html
+++ b/payment-form.html
@@ -18,13 +18,13 @@
     
     <nav class="navbar navbar-expand-md navbar-dark bg-dark border-bottom border-success">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">MyWeb</a>
+        <a class="navbar-brand fs-4" href="#">MyWeb</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
           aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav ms-sm-auto text-center">
+          <div class="navbar-nav ms-sm-auto text-end me-2">
             <a class="nav-link" href="index.html" aria-current="page">Home</a>
             <a class="nav-link" href="Crud.html">Curd App</a>
             <a class="nav-link" href="Resume.html">Rusume</a>
