--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
                         <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne"  data-bs-parent="#accordionExample">
                             <div class="accordion-body">
                                 <strong>Youtube Videos</strong> 
-                                 <code>&nbsp; &nbsp; &nbsp;<a href="http://www.youtube.com" target="_blank">Link</a></code>
+                                <code>&nbsp; &nbsp; &nbsp;<a href="https://youtu.be/HcOc7P5BMi4" target="_blank">Link</a></code>
                             </div>
                             <div class="accordion-body">
                                 <strong>PDFs</strong>
-                                <code>&nbsp; &nbsp; &nbsp;<a href="http://www.drive.google.com" target="_blank">Link</a></code>
+                                <code>&nbsp; &nbsp; &nbsp;<a href="https://drive.google.com/drive/folders/1RJJimAz43SO0WCEaK33boE1hZ01ZmYJV?usp=sharing" target="_blank">Link</a></code>
                             </div>
                         </div>
                     </div>
@@ -117,7 +117,12 @@
                         <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
                             data-bs-parent="#accordionFlushExample">
                             <div class="accordion-body">
-                                <code><a href="http://drive.google.com" class="text-decoration-none">Learn HTML PDF</a></code>
+                                <strong>Youtube Videos</strong> 
+                                <code>&nbsp; &nbsp; &nbsp;<a href="https://youtu.be/OXGznpKZ_sA" target="_blank">Link</a></code>
+                            </div>
+                            <div class="accordion-body">
+                                <strong>PDFs</strong>
+                                <code>&nbsp; &nbsp; &nbsp;<a href="https://drive.google.com/drive/folders/1nTxTR7nhVLsF-zcfHhivbfrM2PL6Ey4W?usp=sharing" target="_blank">Link</a></code>
                             </div>
                         </div>
                     </div>
@@ -154,7 +159,12 @@
                         </h2>
                         <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
                             <div class="accordion-body">
-                                <code><a href="http://drive.google.com" class="text-decoration-none">Learn HTML PDF</a></code>
+                                <strong>Youtube Videos</strong> 
+                                <code>&nbsp; &nbsp; &nbsp;<a href="https://youtu.be/jS4aFq5-91M" target="_blank">Link</a></code>
+                            </div>
+                            <div class="accordion-body">
+                                <strong>PDFs</strong>
+                                <code>&nbsp; &nbsp; &nbsp;<a href="https://drive.google.com/drive/folders/1XIsl3ZtCM2CvMnvtap3kGrnJD6JNwVlm?usp=sharing" target="_blank">Link</a></code>
                             </div>
                         </div>
                     </div>
@@ -192,7 +202,12 @@
                         </h2>
                         <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour"  data-bs-parent="#accordionFlushExample">
                             <div class="accordion-body">
-                                <code><a href="http://drive.google.com" class="text-decoration-none">Learn HTML PDF</a></code>
+                                <strong>Youtube Videos</strong> 
+                                <code>&nbsp; &nbsp; &nbsp;<a href="https://youtu.be/HcOc7P5BMi4" target="_blank">Link</a></code>
+                            </div>
+                            <div class="accordion-body">
+                                <strong>PDFs</strong>
+                                <code>&nbsp; &nbsp; &nbsp;<a href="https://drive.google.com/file/d/1XAwAbeufPFP_WLKN2hLV1jZa_VmfFJpB/view?usp=sharing" target="_blank">Link</a></code>
                             </div>
                         </div>
                     </div>
@@ -231,7 +246,12 @@
                         </h2>
                         <div id="flush-collapseFive" class="accordion-collapse collapse" aria-labelledby="flush-headingFive"  data-bs-parent="#accordionFlushExample">
                             <div class="accordion-body">
-                                <code><a href="http://drive.google.com" class="text-decoration-none">Learn HTML PDF</a></code>
+                                <strong>Youtube Videos</strong> 
+                                <code>&nbsp; &nbsp; &nbsp;<a href="https://youtu.be/HcOc7P5BMi4" target="_blank">Link</a></code>
+                            </div>
+                            <div class="accordion-body">
+                                <strong>PDFs</strong>
+                                <code>&nbsp; &nbsp; &nbsp;<a href="https://drive.google.com/file/d/1XAwAbeufPFP_WLKN2hLV1jZa_VmfFJpB/view?usp=sharing" target="_blank">Link</a></code>
                             </div>
                         </div>
                     </div>
@@ -273,7 +293,12 @@
                         </h2>
                         <div id="flush-collapseSix" class="accordion-collapse collapse" aria-labelledby="flush-headingSix" data-bs-parent="#accordionFlushExample">
                             <div class="accordion-body">
-                                <code><a href="http://drive.google.com" class="text-decoration-none">Learn HTML PDF</a></code>
+                                <strong>Youtube Videos</strong> 
+                                <code>&nbsp; &nbsp; &nbsp;<a href="https://youtu.be/HcOc7P5BMi4" target="_blank">Link</a></code>
+                            </div>
+                            <div class="accordion-body">
+                                <strong>PDFs</strong>
+                                <code>&nbsp; &nbsp; &nbsp;<a href="https://drive.google.com/file/d/1XAwAbeufPFP_WLKN2hLV1jZa_VmfFJpB/view?usp=sharing" target="_blank">Link</a></code>
                             </div>
                         </div>
                     </div>
@@ -313,7 +338,12 @@
                         </h2>
                         <div id="flush-collapseSeven" class="accordion-collapse collapse" aria-labelledby="flush-headingSeven" data-bs-parent="#accordionFlushExample">
                             <div class="accordion-body">
-                                <code><a href="http://drive.google.com" class="text-decoration-none">Learn HTML PDF</a></code>
+                                <strong>Youtube Videos</strong> 
+                                <code>&nbsp; &nbsp; &nbsp;<a href="https://youtu.be/HcOc7P5BMi4" target="_blank">Link</a></code>
+                            </div>
+                            <div class="accordion-body">
+                                <strong>PDFs</strong>
+                                <code>&nbsp; &nbsp; &nbsp;<a href="https://drive.google.com/file/d/1XAwAbeufPFP_WLKN2hLV1jZa_VmfFJpB/view?usp=sharing" target="_blank">Link</a></code>
                             </div>
                         </div>
                     </div>
