--- a/Crud.html
+++ b/Crud.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Curd-App">
+    <meta name="discription" content="Example of basic curd App using HTML ,CSS ,JAVASCRIPT,Bootstarp" >
     <title>MuWeb | Crud-operation</title>
     <link rel="apple-touch-icon" sizes="180x180" href="FaviconB/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="FaviconB/favicon-32x32.png">
