--- a/Resume.html
+++ b/Resume.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="HTML, CSS, JAVASCRIPT, Resume">
+    <meta name="discription" content="Personal Resume" >
   <title>MyWeb | Resume</title>
   <link rel="stylesheet" href="Resources/CSS/resume.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet integrity="  sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -65,9 +67,9 @@
 
         <h4>Contat No</h4>
         <div class="list-group">
-           <li class="list-group-item"><a class=" text-white text-decoration-none" href="tel:713-992-0916">+918604746110</a></li>
+          <li class="list-group-item"><a class=" text-white text-decoration-none" href="tel:713-992-0916">+918604366110</a></li>
         </div>
-                 
+                
         <h4>Address </h4> 
           <div class="list-group">
             <li class="list-group-item"><p class="text-white">Ghazipur ,Utter Pradesh,India</p></li>
