--- a/index.html
+++ b/index.html
@@ -202,11 +202,11 @@
                         <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour"  data-bs-parent="#accordionFlushExample">
                             <div class="accordion-body">
                                 <strong>Youtube Videos</strong> 
-                                <code>&nbsp; &nbsp; &nbsp;<a href="https://youtu.be/HcOc7P5BMi4" target="_blank">Link</a></code>
+                                <code>&nbsp; &nbsp; &nbsp;<a href="https://www.youtube.com/watch?v=6i3EGqOBRiU&list=PLdo5W4Nhv31bZSiqiOL5ta39vSnBxpOPT" target="_blank">Link</a></code>
                             </div>
                             <div class="accordion-body">
                                 <strong>PDFs</strong>
-                                <code>&nbsp; &nbsp; &nbsp;<a href="https://drive.google.com/file/d/1XAwAbeufPFP_WLKN2hLV1jZa_VmfFJpB/view?usp=sharing" target="_blank">Link</a></code>
+                                <code>&nbsp; &nbsp; &nbsp;<a href="https://drive.google.com/drive/folders/1et5q9z3mTdUcjSijZFuJbZ16uXapbqex?usp=sharing" target="_blank">Link</a></code>
                             </div>
                         </div>
                     </div>
