--- a/index.html
+++ b/index.html
@@ -291,11 +291,11 @@
                         <div id="flush-collapseSix" class="accordion-collapse collapse" aria-labelledby="flush-headingSix" data-bs-parent="#accordionFlushExample">
                             <div class="accordion-body">
                                 <strong>Youtube Videos</strong> 
-                                <code>&nbsp; &nbsp; &nbsp;<a href="https://youtu.be/HcOc7P5BMi4" target="_blank">Link</a></code>
+                                <code>&nbsp; &nbsp; &nbsp;<a href="https://www.youtube.com/watch?v=l0qvxPPISuY&list=PLVlQHNRLflP8_DGKcMoRw-TYJJALgGu4J" target="_blank">Link</a></code>
                             </div>
                             <div class="accordion-body">
                                 <strong>PDFs</strong>
-                                <code>&nbsp; &nbsp; &nbsp;<a href="https://drive.google.com/file/d/1XAwAbeufPFP_WLKN2hLV1jZa_VmfFJpB/view?usp=sharing" target="_blank">Link</a></code>
+                                <code>&nbsp; &nbsp; &nbsp;<a href="https://books.goalkicker.com/CPlusPlusBook/" target="_blank">Link</a></code>
                             </div>
                         </div>
                     </div>
@@ -325,7 +325,7 @@
                     The difference between the way Java and other programming languages worked was revolutionary. Code in other languages is
                     first translated by a compiler into instructions for a specific type of computer.
                 </p>
-                <a type="button" class="btn btn-info mb-3" href="https://dev.java/learn/getting-started-with-java/">Learn More</a>
+                <a type="button" class="btn btn-info mb-3" href="https://dev.java/">Learn More</a>
                 <div class="accordion accordion-flush" id="accordionFlushExample7">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="flush-headingSeven">
@@ -336,11 +336,11 @@
                         <div id="flush-collapseSeven" class="accordion-collapse collapse" aria-labelledby="flush-headingSeven" data-bs-parent="#accordionFlushExample">
                             <div class="accordion-body">
                                 <strong>Youtube Videos</strong> 
-                                <code>&nbsp; &nbsp; &nbsp;<a href="https://youtu.be/HcOc7P5BMi4" target="_blank">Link</a></code>
+                                <code>&nbsp; &nbsp; &nbsp;<a href="https://www.youtube.com/watch?v=SJ_uBmIYivY&list=PLVlQHNRLflP8J1HiUMV1oC02Zu2CKvvuk" target="_blank">Link</a></code>
                             </div>
                             <div class="accordion-body">
                                 <strong>PDFs</strong>
-                                <code>&nbsp; &nbsp; &nbsp;<a href="https://drive.google.com/file/d/1XAwAbeufPFP_WLKN2hLV1jZa_VmfFJpB/view?usp=sharing" target="_blank">Link</a></code>
+                                <code>&nbsp; &nbsp; &nbsp;<a href="https://books.goalkicker.com/JavaBook/" target="_blank">Link</a></code>
                             </div>
                         </div>
                     </div>
@@ -381,7 +381,7 @@
 
         // Settings that can be overridden on per-element basis, by `data-aos-*` attributes:
         offset: 120, // offset (in px) from the original trigger point
-        delay: 0, // values from 0 to 3000, with step 50ms
+        delay: 120, // values from 0 to 3000, with step 50ms
         duration: 1000, // values from 0 to 3000, with step 50ms
         easing: 'ease', // default easing for AOS animations
         once: false, // whether animation should happen only once - while scrolling down
