--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="navbar-nav ms-sm-auto text-end me-2 ">
                     <a class="nav-link active" href="index.html" aria-current="page">Home</a>
                     <a class="nav-link" href="Crud.html">Curd App</a>
-                    <a class="nav-link" href="Resume.html">Rusume</a>
+                    <a class="nav-link" href="Resume.html">Resume</a>
                     <a class="nav-link" href="payment-form.html">Form</a>
                     <a class="nav-link" href="Game.html">Game</a>
                 </div>
@@ -378,7 +378,6 @@
         debounceDelay: 50, // the delay on debounce used while resizing window (advanced)
         throttleDelay: 99, // the delay on throttle used while scrolling the page (advanced)
         
-
         // Settings that can be overridden on per-element basis, by `data-aos-*` attributes:
         offset: 120, // offset (in px) from the original trigger point
         delay: 120, // values from 0 to 3000, with step 50ms
@@ -387,7 +386,6 @@
         once: false, // whether animation should happen only once - while scrolling down
         mirror: false, // whether elements should animate out while scrolling past them
         anchorPlacement: 'top-bottom', // defines which position of the element regarding to window should trigger the animation
-
         });
     </script>
 </body>
